examples/errors/staticLayer/RequiresTemplate.bkf
alias foo = []
layer bar using foo: "a" -- foo is a chord, not a template!
